--- a/KAO/index.html
+++ b/KAO/index.html
@@ -27,13 +27,13 @@
 						<div class="content">
 							<div class="inner">
 								<h1><a href="https://www.facebook.com/%E6%9D%8E%E8%80%81%E6%AF%8D%E9%BB%9E%E5%BF%83%E8%88%96-105728394522895/">櫂森室內設計</a></h1>
-								<p>室內設計科系出生，品質保證、一定會畫圖💔<br>價格公道、絕不隨意收取費用！免費丈量w(ﾟДﾟ)w歡迎配合🖕<br>室內設計、系統櫃、人造人、石英石 </p>
+								<p>室內設計科系出生，品質保證、一定會畫圖💔<br>價格公道、絕不隨意收取費用！免費丈量w(ﾟДﾟ)w歡迎配合🖕<br>室內設計、系統櫃、人造人、石英石、可攻可受、是0也是1、男女通吃 </p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#curry">個人簡介</a></li>
-								<li><a href="#radish">夜露死苦</a></li>
+								<li><a href="#intro">個人簡介</a></li>
+								<li><a href="#yoroshiku">夜露死苦</a></li>
 								<!-- <li><a href="#taro">富粿芋頭糕</a></li> -->
 								<!-- <li><a href="#salt_pork">古早味客家鹹豬肉</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -44,12 +44,12 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- curry -->
-							<article id="curry">
+						<!-- intro -->
+							<article id="intro">
 								<h2 class="major">個人簡介</h2>
                                 <span class="image main"><img src="images/kao.jpg" alt="" /></span>
 								
-								<p> 大家好，我是高宏騰，外號叫貢糖，也可以叫我「亞洲瀑布王」，以前從事俗稱8+9的行業，現在自己出來創業，想當個斯文的敗類，有任何室內裝潢的問題都可以傳Line或是ig詢問唷~<br> <br>
+								<p> 大家好，我是高O騰，外號叫貢糖，也可以叫我「亞洲瀑布王」，以前從事俗稱8+9的行業，興趣是跳陣頭，現在自己出來創業，想當個斯文的敗類，有任何室內裝潢的問題都可以傳Line或是ig詢問唷~<br> <br>
 									Line：steven831224<br>
 									instagram：kao.hong.teng<br> <br>
 									男上加男 強人鎖男 勉為騎男 面有男色　<br> 
@@ -67,8 +67,8 @@
                                 
 							</article>
 
-						<!-- radish -->
-							<article id="radish">
+						<!-- yoroshiku -->
+							<article id="yoroshiku">
 								<h2 class="major">夜露死苦</h2>
 								<span class="image main"><img src="images/gay.jpg" alt="" /></span>
 								<p>男同性戀者通常是身體與生理構造與其他性取向的男性無異，唯獨心理和生理上受同性所吸引的順性別者。如果性別認同不認為自己是男性的男性有可能不認為自己屬於男同性戀，例如順利實施變性手術的跨性別女性可能認為自己屬於異性戀，即直女，而在法律定義上，「男同性戀」一詞傾向歸於男性之間的性關係。</p>
