--- a/KAO/index.html
+++ b/KAO/index.html
@@ -27,7 +27,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1><a href="https://www.facebook.com/%E6%9D%8E%E8%80%81%E6%AF%8D%E9%BB%9E%E5%BF%83%E8%88%96-105728394522895/">櫂森室內設計</a></h1>
-								<p>室內設計科系出生，品質保證、一定會畫圖💔<br>價格公道、絕不隨意收取費用！免費丈量w(ﾟДﾟ)w歡迎配合🖕<br>室內設計、系統櫃、人造人、石英石、可攻可受、是0也是1、男女通吃 </p>
+								<p>室內設計科系出生，品質保證、一定會畫圖💔<br>價格公道、絕不隨意收取費用！免費丈量w(ﾟДﾟ)w歡迎配合🖕<br>
+									室內設計、系統櫃、人造人、石英石<br>
+								可攻可受👃🏿、是0也是1😮‍💨、男女通吃、專治便祕💞 </p>
 							</div>
 						</div>
 						<nav>
