comment some info

--- a/KAO/index.html
+++ b/KAO/index.html
@@ -52,8 +52,8 @@
 								<span class="image main"><img src="images/kao.jpg" alt="" /></span>
 								
 								<p> 大家好，我是高○騰，外號叫貢糖、瀑布一郎、錦和狂犬，也可以叫我「亞洲瀑布王」，以前從事俗稱8+9的行業，興趣是跳陣頭，現在自己出來創業，想當個斯文的敗類，有任何室內裝潢的問題都可以傳Line或是ig詢問唷~<br> <br>
-									Line：steven831224<br>
-									instagram：kao.hong.teng<br> <br>
+									<!-- Line：steven831224<br> -->
+									<!-- instagram：kao.hong.teng<br> <br> -->
 									男上加男 強人鎖男 勉為騎男 面有男色　<br> 
 									左右為男 男男自語 男能可貴 千載男逢  <br>
 									知男而上 男言之癮 男得糊塗 男忘今宵  <br>
