Modify news picture and text background color.   ver. 2022/09/01

--- a/TSENG/index.html
+++ b/TSENG/index.html
@@ -39,9 +39,9 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading" style="color: dodgerblue;">合法專業報廢，過期食品、商品、文件、產品報廢銷毀作業 廢棄物換現金,專人到府回收,估價, 全台廢棄物處理服務, 歡迎內洽!</div>
-                <div class="masthead-heading text-uppercase" style="color: dodgerblue;">歡迎蒞臨和輝環保工程</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#about">Tell Me More</a>
+                <div class="masthead-subheading" style="color: dodgerblue; background-color: pink;">合法專業報廢，過期食品、商品、文件、產品報廢銷毀作業 廢棄物換現金,專人到府回收,估價, 全台廢棄物處理服務, 歡迎內洽!</div>
+                <div class="masthead-heading text-uppercase" style="color: dodgerblue; background-color: pink;">歡迎蒞臨和輝環保工程</div>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#about">更多資訊</a>
             </div>
         </header>
         <!-- about-->
@@ -411,7 +411,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">聯絡我們</h2>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.4011613361586!2d121.4828840029321!3d25.020456566595097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a8368321245d%3A0xe8850b18d0a1ab5e!2zMjIw5paw5YyX5biC5p2_5qmL5Y2A5YWJ5b6p6KGXMjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1662045046263!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.4011613361586!2d121.4828840029321!3d25.020456566595097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a8368321245d%3A0xe8850b18d0a1ab5e!2zMjIw5paw5YyX5biC5p2_5qmL5Y2A5YWJ5b6p6KGXMjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1662045046263!5m2!1szh-TW!2stw" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <h3 class="section-subheading text-muted">公司電話：02-2962-6635<br/>
                         行動電話：0970-565-375<br/>
                         電子信箱：aa50109000@yahoo.com.tw<br/>
