[counter] adjust UI to really iphone 8 plus

--- a/counter/index.html
+++ b/counter/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Counter Webpage</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -12,21 +12,21 @@
   <body>
     
     <div>
-      <button id="r_increment-btn">＋</button>
+      <button id="r_increment-btn">+</button>
       <span id="r_counter">0</span>
-      <button id="r_reduce-btn">－</button>
+      <button id="r_reduce-btn">-</button>
     </div>
 
     <div>
-      <button id="g_increment-btn">＋</button>
+      <button id="g_increment-btn">+</button>
       <span id="g_counter">0</span>
-      <button id="g_reduce-btn">－</button>
+      <button id="g_reduce-btn">-</button>
     </div>
 
     <div>
-      <button id="b_increment-btn">＋</button>
+      <button id="b_increment-btn">+</button>
       <span id="b_counter">0</span>
-      <button id="b_reduce-btn">－</button>
+      <button id="b_reduce-btn">-</button>
     </div>
 
     <div>
