[counter] add icon

--- a/counter/index.html
+++ b/counter/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Counter Webpage</title>
+    <title>FAQ</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="jitochi.ico" rel="shortcut icon"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       
   </head>
