--- a/redirect/index.html
+++ b/redirect/index.html
@@ -15,6 +15,21 @@
             background-position: center;
             background-repeat: no-repeat;
         }
+
+        * {
+            cursor: url(./cursor/01_akua_03.cur), auto;
+        }
+
+        * a:hover {
+            cursor: url(./cursor/01_akua_pointer_03.cur), auto;
+        }
+
+        p,
+        span,
+        input,
+        textarea {
+            cursor: url(./cursor/01_akua_text_03.cur), auto;
+        }
     </style>
 </head>
 
