--- a/redirect/index.html
+++ b/redirect/index.html
@@ -20,15 +20,8 @@
             cursor: url(./cursor/01_akua_03.cur), auto;
         }
 
-        * a:hover {
-            cursor: url(./cursor/01_akua_pointer_03.cur), auto;
-        }
-
-        p,
-        span,
-        input,
-        textarea {
-            cursor: url(./cursor/01_akua_text_03.cur), auto;
+        *:active{
+            cursor: url(./cursor/01_akua_help_03.cur), auto;
         }
     </style>
 </head>
